--- a/templates/index.html
+++ b/templates/index.html
@@ -15,17 +15,16 @@
   </header>
 
   <nav class="navigation">
-        <a href="">HOME</a>
-        <a href="">HIGHLIGHTS</a>
-        <a href="">ABOUT</a>
+        <a href="/index">HOME</a>
+        <a href="/highlights">HIGHLIGHTS</a>
+        <a href="/about">ABOUT</a>
   </nav>
      
   <main class="main-button">
-    <form action="" method="POST">
-         <div class="buttondiv">
-              <button id="gen-button" type="submit">CLICK ME</button>
-         </div>
-    </form>
+     <div class="buttondiv">
+          <button id="gen-button" onClick="submit">CLICK FOR RANDOM FACTS</button>
+     </div>
+      <p id="fact"></p>   
       
   </main>
 
